orgloom-package/force-app/main/default/objects/Org_Kek_Setting__c/fields/Key_Version__c.field-meta.xml
<CustomField>
    <fullName>Key_Version__c</fullName>
    <description>Monotonically increasing version, bumped only on KEK rotation. Wrapped DEKs persisted before rotation reference the old version; rewrapDek() detects mismatch and re-wraps under current. Starts at 1.</description>
    <label>Key Version</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>