orgloom-package/force-app/main/default/objects/Org_Kek_Setting__c/fields/Wrapped_Key__c.field-meta.xml
<CustomField>
    <fullName>Wrapped_Key__c</fullName>
    <description>Base64-encoded KEK material. Length = 32 raw bytes = 44 base64 chars (with padding). Generated at bootstrap via Crypto.generateAesKey(256). Never transmitted out of the customer's org; Apex reads it via getValues() and uses it to wrap / unwrap DEKs inside the same execution context.</description>
    <label>Wrapped Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>